finished popup section and fixed nav buttons still being on the screen invisible

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -38,7 +38,7 @@
         height: 100vh;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -25%;
         z-index: 1500;
         
         opacity: 0;
@@ -50,7 +50,7 @@
         width: 100%;
         position: absolute;
         top: 50%;
-        left: 50%;
+        left: 75%;
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
